# yacht-opencv

./: .gitignore  README.md  build.bat  package.sh  pyproject.toml
src/yacht_opencv/: __init__.py  __main__.py  config.py  matcher.py  notifier.py  overlay.py  screen.py  settings.py  tray.py
